[package]
authors = ["Daniel Götten <daniel.goetten@gmail.com>"]
edition = "2018"
name = "jwt-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
hmac = "0.11"
rand = "0.8"
rsa = "0.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sha2 = "0.9"
